--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Exotic Cars!</title>
 </head>
 <main>
-    <h2>Welcome to a View of Exotic Cars! Here i will break down two of the most famous cars in the car colections world</h2>
-    <a href="Img/Ferrari.458.jpg " alt= "Ferrari.458"></a>
+    <h2>Welcome to a View of Exotic Cars! Here i will break down two of the most famous cars in the car colections world.</h2>
+    <a href= "Img/Ferrari-458.jpg" alt= "Ferrari 458">
 </main>
 
 
