--- a/index.html
+++ b/index.html
@@ -4,14 +4,39 @@
     <meta charset="UTF-8">
     <title>Exotic Cars!</title>
 </head>
+<body>
 <main>
     <h2>Welcome to a View of Exotic Cars! Here i will break down two of the most famous cars in the car colections world.</h2>
-    <a href= "Img/Ferrari-458.jpg" alt= "Ferrari 458">
+    <img src="Img/Ferrari-458.jpg" width="600" height="400" alt= "Ferrari 458">
+    <img src="Img/porsche-911.jpg" width="400" height="600" alt=" porsche-911">
+
+        <p>These cars are a car lover's dream but carry very expensive price tags.<br> 
+            If interested in purchasing one of these beauties, be prpared to pay a few hundred thousand dollars!!!</p>
+
+
+    
+            <a href="Ferrari.html">Ferrari page</a>
+            <a href="Porsche.html">Porsche page</a>
+            <a href="Table.html">Comparisons</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </main>
 
 
 
-<body>
+
     
 </body>
 </html>
