--- a/table.html
+++ b/table.html
@@ -20,9 +20,12 @@
             <td>518</td>
         </tr>
         <tr>
-            <td></td>
-
+            <td>Average Price</td>
+            <td>$239000</td>
+            <td>$244000</td>
         </tr>
+
+        <p>Even though these cars are easy to fall in love with, you <em>MUST</em> have a lifestyle made to endure the responsibilities that come with the ownership of these vehicles.</p>
 
 
 
