--- a/Porsche.html
+++ b/Porsche.html
@@ -9,8 +9,8 @@
     <h1 style="color:blue">Porsche 911</h1>
     <main>
         <img src="Img/porsche-911.jpg" alt="Porsche 911 turbo"<br>
-        
 
+<p>For Porsche, the finish line is just a stepping stone in the continuous pursuit of further improvement.</p>
 
 
 
